Make manual entry of password work again.

This ceased to work after porting from KIO::Passworddialog to
KPasswordDialog, since KIO::PasswordDialog stored the login and password into
the variables passed by reference in the constructor, while KPasswordDialog
doesn't do this.

BUG: 260265